[package]
name = "developers"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
yew = "0.17"
wasm-bindgen = "0.2"
